# homeworldz

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  FEATURES.md  GOAL.md  INSTALL-GRID.md  INSTALL-REGION.md  LICENSE  PHYSICS.md  PLAN.md  README.md  go.work  syncweb.mjs  vcpkg.json
.github/workflows/: ci.yml
api/: openapi.yaml
api/contracts/: operational.tsv
assets/region/: HALCYON-ASSET-LICENSES.txt  README.md
assets/region/map/: 00000000-0000-1111-9999-000000000100.j2c  README.md
assets/region/terrain/: README.md  default-heightmap.raw  plateau-round.raw  plateau-square.raw
cmake/ports/physx/: omniverse-physx-sdk-config.cmake  portfile.cmake
config/ci/: db.ini  grid.ini  regions.json
config/examples/: db.ini  grid-cloud.ini  grid-personal.ini  grid.ini  region-cloud.ini  region-personal.ini  region.ini  regions.json
db/migrations/: 000001_initial.down.sql  000001_initial.up.sql  000002_viewer_login.down.sql  000002_viewer_login.up.sql  000003_viewer_circuit.down.sql  000003_viewer_circuit.up.sql  000004_region_viewer_port.down.sql  000004_region_viewer_port.up.sql  000005_inventory_metadata.down.sql  000005_inventory_metadata.up.sql  000006_library_identity.down.sql  000006_library_identity.up.sql  000007_asset_federation.down.sql  000007_asset_federation.up.sql  000008_calling_card_folders.down.sql  000008_calling_card_folders.up.sql  000009_avatar_transits.down.sql  000009_avatar_transits.up.sql  000010_user_last_locations.down.sql  000010_user_last_locations.up.sql  000011_persistent_provisioned_regions.down.sql  000011_persistent_provisioned_regions.up.sql  000012_task_inventory_transfers.down.sql  000012_task_inventory_transfers.up.sql  000013_task_inventory_extractions.down.sql  000013_task_inventory_extractions.up.sql  000014_inventory_object_rezzes.down.sql  000014_inventory_object_rezzes.up.sql  000015_provisioned_region_records.down.sql  000015_provisioned_region_records.up.sql  000016_provisioned_region_endpoints.down.sql  000016_provisioned_region_endpoints.up.sql  000017_provisioned_region_extents.down.sql  000017_provisioned_region_extents.up.sql  000018_website_accounts.down.sql  000018_website_accounts.up.sql  000019_display_name_key.down.sql  000019_display_name_key.up.sql  000020_entity_tags.down.sql  000020_entity_tags.up.sql  (+4 more)
deploy/: compose.yaml
deploy/linux/: Caddyfile.grid  homeworldz-api.service  homeworldz-grid.service  homeworldz-region@.service  region.env.example
docs/: ARCHITECTURE.md  ASSETS.md  FEATURES.md  FIRESTORM.md  INSTALL-GRID.md  INSTALL-REGION.md  PACKAGING.md  PHYSICS.md  PHYSICS_RESULTS.md  PLAN.md  ROADMAP.md  SCRIPTING.md  VM.md
docs/adr/: 0001-system-shape.md  0002-physics-evaluation.md  0003-operational-endpoints.md  0004-default-ports.md  0005-external-postgres.md  0006-operator-bootstrap.md  0007-internal-request-boundary.md  0008-region-leases.md  0009-development-sessions.md  0010-presence-heartbeats.md  0011-authoritative-scene-loop.md  0012-region-grid-client.md  0013-region-sqlite-snapshots.md  0014-content-addressed-assets.md  0015-physics-world-boundary.md  0016-firestorm-compatibility-target.md  0017-central-inventory-metadata.md  0017-viewer-login-credentials.md  0018-ais-first-viewer-inventory.md  0019-permission-semantics.md  0020-asset-origin-and-replication.md  0021-script-runtime-boundary.md  0022-deployment-port-profiles.md  0023-portable-mesh-collision-representations.md  0024-provisioned-region-identity.md  0025-idempotent-avatar-transits.md  0026-vault-authoritative-inventory-assets.md  0027-asset-blob-instance-separation.md  0028-untrusted-region-trust-model.md  0029-server-side-appearance-baking.md
grid/: go.mod  go.sum
grid/cmd/bootstrap-grid/: main.go  main_test.go
grid/cmd/configure-library/: main.go
region/: CMakeLists.txt
region/include/homeworldz/: api_models.h  appearance_bake.h  avatar_controller.h  bake.h  falcon_runtime.h  grid_client.h  http_response.h  image.h  inventory_asset.h  object_asset.h  parcel.h  physics.h  physics_adapters.h  physics_scenarios.h  physics_scene.h  region_config.h  region_storage.h  region_transit.h  scene.h  script_runtime.h  sha256.h  simulation_loop.h  terrain_edit.h  viewer_capabilities.h  viewer_protocol.h  visual_params.h  wearable.h
region/src/: api_models.cpp  appearance_bake.cpp  avatar_controller.cpp  bake.cpp  falcon_runtime.cpp  grid_client.cpp  http_response.cpp  image.cpp  inventory_asset.cpp  jolt_world.cpp  main.cpp  object_asset.cpp  parcel.cpp  physics_lab.cpp  physics_scenarios.cpp  physics_scene.cpp  physx_world.cpp  region_config.cpp  region_storage.cpp  region_transit.cpp  scene.cpp  sha256.cpp  simulation_loop.cpp  terrain_edit.cpp  viewer_capabilities.cpp  viewer_protocol.cpp  visual_params.cpp  wearable.cpp
region/tests/: appearance_bake_test.cpp  avatar_controller_test.cpp  bake_diag.cpp  bake_test.cpp  falcon_runtime_test.cpp  grid_client_test.cpp  http_response_test.cpp  image_test.cpp  inventory_asset_test.cpp  object_asset_test.cpp  parcel_test.cpp  physics_adapters_test.cpp  physics_contract_test.cpp  physics_scenarios_test.cpp  physics_scene_test.cpp  region_config_test.cpp  region_storage_test.cpp  region_transit_test.cpp  scene_test.cpp  script_runtime_test.cpp  terrain_edit_test.cpp  viewer_protocol_test.cpp  visual_params_test.cpp  wearable_test.cpp
script/: CMakeLists.txt
script/include/homeworldz/script/: ast.h  bytecode.h  compiler.h  lexer.h  parser.h  vm.h
script/src/: compiler.cpp  lexer.cpp  parser.cpp  vm.cpp
script/tests/: script_poc_test.cpp
scripts/: bootstrap-grid.ps1  bootstrap-region.ps1  build-region.ps1  build-region.sh  firestorm-smoke-test.cmd  firestorm-smoke-test.ps1  package-release.cmd
tools/: .gitignore
tools/testclient/: README.md  s0.txt  s1.txt  s2.txt  s3.txt  smoke.txt
website/: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  redocly.yaml  tsconfig.app.json  vite.config.ts
website/api/: README.md  openapi.yaml
website/src/: App.jsx  App.tsx  index.jsx  index.tsx  styles.css  vite-env.d.ts
(+107 files in other folders)
